<resources>
    <!--String de home-->
    <string name="app_name">Peluquería</string>
    <string name="texto_bienvenidaUsuario">App Peluquería</string>
    <string name="mis_daros_de_contacto">Mis datos de contacto:</string>
    <string name="boton_nuevaReserva">Nueva reserva</string>

    <!--Datos de usuario-->
    <string name="nombre_usuario">Nombre del usuario</string>
    <string name="telefono_usuario">Telefono del usuario</string>

    <!--TITULOS DE PÁGINAS -->
    <string name="titulo_principal">Reservas</string>
    <string name="titulo_book">Biblioteca</string>
    <string name="titulo_history">Historial de reservas:</string>
    <string name="titulo_user">Editar Usuario</string>
    <string name="titulo_ofertas">Peluquerías:</string>

    <!-- -->
    <string name="home">Home</string>
    <string name="user">User</string>
    <string name="book">Book</string>
    <string name="history">History</string>

    <!--Datos de reserva-->
    <string name="nombre_comercio">Nombre de Peluquería</string>
    <string name="fecha_hora_cita">Fecha 19/10/24 Horario: 14:50</string>
    <string name="servicio_comercio">Servicio: Corte</string>
    <string name="direccion_comercio">Dirección: Calle 1234, CABA</string>
    <string name="telefono_comercio">Nuestro teléfono: 1136598744</string>
    <string name="mi_reserva">Mi Reserva:</string>


</resources>