<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.peluqueria.MainActivityHome">

    <TextView
        android:id="@+id/bienvenidaUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/texto_bienvenidaUsuario"
        app:layout_constraintBottom_toTopOf="@+id/Titulo_reservas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/home_page"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Titulo_reservas"
        android:layout_width="217dp"
        android:layout_height="53dp"
        android:layout_marginBottom="8dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/titulo_principal"
        app:layout_constraintBottom_toTopOf="@+id/textViewMisdarosDeContacto"
        app:layout_constraintEnd_toEndOf="@+id/bienvenidaUsuario"
        app:layout_constraintStart_toStartOf="@+id/bienvenidaUsuario"
        app:layout_constraintTop_toBottomOf="@+id/bienvenidaUsuario" />

    <TextView
        android:id="@+id/textViewMisdarosDeContacto"
        android:layout_width="296dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="30dp"
        android:autoSizeTextType="uniform"
        android:gravity="left"
        android:text="@string/mis_daros_de_contacto"
        app:layout_constraintBottom_toTopOf="@+id/nombre_usuario"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/nombre_usuario"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:autoSizeTextType="uniform"
        android:gravity="left"
        android:text="@string/nombre_usuario"
        app:layout_constraintBottom_toTopOf="@+id/telefono_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/nombre_usuario"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_person_foreground" />

    <TextView
        android:id="@+id/telefono_usuario"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="15dp"
        android:autoSizeTextType="uniform"
        android:gravity="left"
        android:text="@string/telefono_usuario"
        app:layout_constraintBottom_toTopOf="@+id/textViewMiReserva"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toEndOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewMiReserva"
        app:layout_constraintEnd_toStartOf="@+id/telefono_usuario"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_call_foreground" />

    <TextView
        android:id="@+id/textViewMiReserva"
        android:layout_width="227dp"
        android:layout_height="40dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="8dp"
        android:autoSizeTextType="uniform"
        android:gravity="left"
        android:text="@string/mi_reserva"
        app:layout_constraintBottom_toTopOf="@+id/scrollViewPrincipal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollViewPrincipal"
        android:layout_width="404dp"
        android:layout_height="226dp"
        android:layout_marginBottom="8dp"
        android:autoSizeTextType="uniform"
        android:background="@color/white"
        android:contentDescription="En este scrollView vemos las reservas"
        android:gravity="center"
        android:hint="En este scrollView vemos las reservas"
        app:layout_constraintBottom_toTopOf="@+id/boton_NuevaReserva"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/CardViewLinerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/CardView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/grey"
                app:cardCornerRadius="10dp">

                <ImageButton
                    android:id="@+id/cancelar_cita"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="right"
                    android:layout_marginBottom="8dp"
                    android:background="@color/grey"
                    android:contentDescription="Este boton es para cancelar la cita"
                    android:hint="Botón cancelar cita"
                    android:onClick="eliminarCita"
                    app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
                    app:tint="@color/red" />

                <TextView
                    android:id="@+id/cardView_nombre_peluqueria"
                    android:layout_width="292dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:autoSizeTextType="uniform"
                    android:gravity="left"
                    android:text="@string/nombre_comercio"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/cardView_fecha_horario_cita"
                    android:layout_width="268dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="60dp"
                    android:autoSizeTextType="uniform"
                    android:gravity="left"
                    android:text="@string/fecha_hora_cita"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/cardView_servicio_tipo"
                    android:layout_width="193dp"
                    android:layout_height="28dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="90dp"
                    android:autoSizeTextType="uniform"
                    android:gravity="left"
                    android:text="@string/servicio_comercio"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/cardView_direccion_peluqueria"
                    android:layout_width="291dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="120dp"
                    android:autoSizeTextType="uniform"
                    android:gravity="left"
                    android:text="@string/direccion_comercio"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/cardView_telefono_peluqueria"
                    android:layout_width="368dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="150dp"
                    android:layout_marginBottom="20dp"
                    android:autoLink="phone"
                    android:autoSizeTextType="uniform"
                    android:gravity="left"
                    android:text="@string/telefono_comercio"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/boton_NuevaReserva"
        android:layout_width="171dp"
        android:layout_height="68dp"
        android:layout_marginBottom="8dp"
        android:text="@string/boton_nuevaReserva"
        android:textSize="18dp"
        android:backgroundTint="@color/green"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/botonera"
        app:layout_constraintEnd_toEndOf="@+id/scrollViewPrincipal"
        app:layout_constraintStart_toStartOf="@+id/scrollViewPrincipal" />

    <LinearLayout
        android:id="@+id/botonera"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/home_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/button_home"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:contentDescription="Este boton es para cancelar la cita"
            android:hint="Botón cancelar cita"
            app:srcCompat="@drawable/ic_home_foreground"
            app:tint="@color/green"/>

        <ImageButton
            android:id="@+id/button_books"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:contentDescription="Este boton es para cancelar la cita"
            android:hint="Botón cancelar cita"
            app:srcCompat="@drawable/ic_book_foreground"
            app:tint="@color/black"/>

        <ImageButton
            android:id="@+id/button_user"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:contentDescription="Este boton es para cancelar la cita"
            android:hint="Botón cancelar cita"
            app:srcCompat="@drawable/ic_person_foreground"
            app:tint="@color/black"/>

        <ImageButton
            android:id="@+id/button_history"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:contentDescription="Este boton es para cancelar la cita"
            android:hint="Botón cancelar cita"
            app:srcCompat="@drawable/ic_history_foreground"
            app:tint="@color/black"/>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>